Bug 136752 - Pie chart data labels with Best Fit and long text become narrow and tall
Summary: Pie chart data labels with Best Fit and long text become narrow and tall
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords: implementationError
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-09-14 14:37 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (11.63 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-09-14 14:37 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (184.62 KB, image/png)
2020-09-14 14:37 UTC, NISZ LibreOffice Team
Details
effect of the initial fix on tdf133376.xlsx (68.22 KB, image/png)
2020-09-23 08:42 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-14 14:37:26 UTC
Created attachment 165496 [details]
Example file from Excel

Attached file contains a pie chart with long data labels and Best Fit alignment.
In Calc these data labels are very narrow and tall, some flow out of the chart unlike in Excel.

Steps to reproduce:
    1. Open attached file in Excel and Calc

Actual results:
Data labels are very narrow and too tall. Pie slices look also a little smaller or less round.

Expected results:
Data labels should be less narrow and tall.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x86)
Build ID: 3c0dbea19492eecaf8e6e1cb0542a3f93c7298e3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; 
Locale: en-US (hu_HU)

Not yet in: 
Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)
There was no line breaking in long data labels yet so they were too wide, not narrow.
Comment 1 NISZ LibreOffice Team 2020-09-14 14:37:51 UTC
Created attachment 165497 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Commit Notification 2020-09-23 08:30:38 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2e1a1054a4a98415057e72269ace9db075d3b191

tdf#136752 pie chart: improve data label position

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2020-09-23 08:42:50 UTC
Created attachment 165788 [details]
effect of the initial fix on tdf133376.xlsx