chart2/source/view/charttypes/PieChart.hxx
@@ -105,8 +105,10 @@ struct PieLabelInfo;
                                 , PieLabelInfo* pCenter, bool bSingleCenter, bool& rbAlternativeMoveDirection
                                 , const css::awt::Size& rPageSize );
 
-    bool                performLabelBestFitInnerPlacement(ShapeParam& rShapeParam, PieLabelInfo const & rPieLabelInfo);
-    void                performLabelBestFit(ShapeParam& rShapeParam, PieLabelInfo const & rPieLabelInfo);
+    bool                performLabelBestFitInnerPlacement( ShapeParam& rShapeParam
+                                , PieLabelInfo const & rPieLabelInfo );
+    static void         performLabelBestFitOuterPlacement( ShapeParam& rShapeParam
+                                , PieLabelInfo const & rPieLabelInfo );
 
 private: //member
     std::unique_ptr<PiePositionHelper>
